AC_PREREQ(2.55)
AC_INIT()

AC_MSG_CHECKING(svn rev)
if test -f svn-rev; then
        SVN_REV=$(cat svn-rev)
else
        SVN_REV=$(svn info | awk '($1 == "Revision:"){print $2}')
fi

if test -z "$SVN_REV"; then
        AC_MSG_ERROR([couldn't find svn rev]);
fi
if echo $SVN_REV | grep -q '[^0-9]'; then
        AC_MSG_ERROR([bad svn rev: $SVN_REV]);
fi
# so that future ./configure can find it without running svn, as done above
echo $SVN_REV > svn-rev
AC_MSG_RESULT($SVN_REV)
AC_SUBST(SVN_REV)

AC_OUTPUT(Makefile rds-tools.spec)
